--- a/index.html
+++ b/index.html
@@ -5,34 +5,41 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./index.html">Портфоліо</a></li>
-          <li><a href="./index.html">Контакти</a></li>
+    <header class="page-header">
+      <nav class="page-nav">
+        <a class="link" href="./index.html">WebStudio</a>
+        <ul class="menu list">
+          <li class="menu-item"><a class="menu-link link" href="./index.html">Студія</a></li>
+          <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфоліо</a></li>
+          <li class="menu-item"><a class="menu-link link" href="./index.html">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contact list">
+        <li class="contact-item"><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="contact-item"><a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
       <!-- hero -->
-      <section>
+      <section class="hero">
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
 
-      <!-- qualities... are not so good regarding the text -->
+      <!-- qualities -->
       <section>
         <h2>Особливості</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3>Увага до деталей</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
@@ -55,7 +62,7 @@
       <!-- what we do -->
       <section>
         <h2>Чим ми займаємося</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/box-1.jpg" alt="Десктопні програми" width="370" />
           </li>
@@ -71,7 +78,7 @@
       <!-- team -->
       <section>
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/img-1.jpg" alt="Фото Ігора Дем'яненко" width="270" />
             <h3>Ігор Дем'яненко</h3>
@@ -99,13 +106,14 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a>
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
           </li>
           <li>
             <a href="mailto:info@example.com">info@example.com</a>
