--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="page-header">
       <nav class="page-nav">
-        <a class="link" href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html"><span class="accent">Web</span>Studio</a>
         <ul class="menu list">
           <li class="menu-item"><a class="menu-link link" href="./index.html">Студія</a></li>
           <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфоліо</a></li>
@@ -24,44 +24,48 @@
         </ul>
       </nav>
       <ul class="contact list">
-        <li class="contact-item"><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="contact-item"><a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="contact-item">
+          <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="contact-item">
+          <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
     <main>
       <!-- hero -->
       <section class="hero">
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="btn" type="button">Замовити послугу</button>
       </section>
 
       <!-- qualities -->
-      <section>
-        <h2>Особливості</h2>
+      <section class="qualities">
+        <h2 class="title visually-hidden">Особливості</h2>
         <ul class="list">
           <li>
-            <h3>Увага до деталей</h3>
+            <h3 class="qualities-subtitle">Увага до деталей</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3>Пунктуальність</h3>
+            <h3 class="qualities-subtitle">Пунктуальність</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3>Планування</h3>
+            <h3 class="qualities-subtitle">Планування</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3>Сучасні технології</h3>
+            <h3 class="qualities-subtitle">Сучасні технології</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
 
       <!-- what we do -->
-      <section>
-        <h2>Чим ми займаємося</h2>
+      <section class="specialty">
+        <h2 class="title">Чим ми займаємося</h2>
         <ul class="list">
           <li>
             <img src="./images/box-1.jpg" alt="Десктопні програми" width="370" />
@@ -76,50 +80,51 @@
       </section>
 
       <!-- team -->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="team">
+        <h2 class="title">Наша команда</h2>
         <ul class="list">
           <li>
             <img src="./images/img-1.jpg" alt="Фото Ігора Дем'яненко" width="270" />
-            <h3>Ігор Дем'яненко</h3>
+            <h3 class="team-subtitle">Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="Фото Ольги Рєпіної" width="270" />
-            <h3>Ольга Рєпіна</h3>
+            <h3 class="team-subtitle">Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img-3.jpg" alt="Фото Миколи Тарасова" width="270" />
-            <h3>Микола Тарасов</h3>
+            <h3 class="team-subtitle">Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/img-4.jpg" alt="Фото Михайла Єрмакова" width="270" />
-            <h3>Михайло Єрмаков</h3>
+            <h3 class="team-subtitle">Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
-        <ul class="list">
-          <li>
+    <footer class="page-footer">
+      <a class="logo link" href="./index.html"><span class="accent">Web</span>Studio</a>
+      <address class="address">
+        <ul class="footer-contact list">
+          <li class="footer-contact-item">
             <a
+              class="footer-address-link link"
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+          <li class="footer-contact-item">
+            <a class="footer-contact-link link" href="mailto:info@example.com">info@example.com</a>
           </li>
-          <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <li class="footer-contact-item">
+            <a class="footer-contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
