--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   <body>
     <header class="page-header">
       <nav class="page-nav">
-        <a class="link" href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html"><span class="accent">Web</span>Studio</a>
         <ul class="menu list">
           <li class="menu-item"><a class="menu-link link" href="./index.html">Студія</a></li>
           <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфоліо</a></li>
@@ -24,45 +24,49 @@
         </ul>
       </nav>
       <ul class="contact list">
-        <li class="contact-item"><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="contact-item"><a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="contact-item">
+          <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="contact-item">
+          <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
     <main>
-      <section>
-        <h1>Portfolio</h1>
+      <section class="portfolio">
+        <h1 class="visually-hidden">Portfolio</h1>
         <ul class="list">
-          <li><button type="button">Усі</button></li>
-          <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Додатки</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button class="filter-btn" type="button">Усі</button></li>
+          <li><button class="filter-btn" type="button">Веб-сайти</button></li>
+          <li><button class="filter-btn" type="button">Додатки</button></li>
+          <li><button class="filter-btn" type="button">Дизайн</button></li>
+          <li><button class="filter-btn" type="button">Маркетинг</button></li>
         </ul>
         <ul class="list">
           <li>
             <img src="./images/project-1.jpg" alt="Фото веб-сайту Технокряк" width="370" />
-            <h2>Технокряк</h2>
+            <h2 class="portfolio-subtitle">Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
             <img src="./images/project-2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
-            <h2>Постер New Orlean vs Golden Star</h2>
+            <h2 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
           <li>
             <img src="./images/project-3.jpg" alt="Логотип ресторану The Seafood" width="370" />
-            <h2>Ресторан Seafood</h2>
+            <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
             <p>Додаток</p>
           </li>
           <li>
             <img src="./images/project-4.jpg" alt="Фото навушників" width="370" />
-            <h2>Проєкт Prime</h2>
+            <h2 class="portfolio-subtitle">Проєкт Prime</h2>
             <p>Маркетинг</p>
           </li>
           <li>
             <img src="./images/project-5.jpg" alt="Фото двох коробок" width="370" />
-            <h2>Проєкт Boxes</h2>
+            <h2 class="portfolio-subtitle">Проєкт Boxes</h2>
             <p>Додаток</p>
           </li>
           <li>
@@ -71,45 +75,46 @@
               alt="Фото веб-сайту Inspiration has no Borders"
               width="370"
             />
-            <h2>Inspiration has no Borders</h2>
+            <h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
             <img src="./images/project-7.jpg" alt="Фото розгортки журналу" width="370" />
-            <h2>Видання Limited Edition</h2>
+            <h2 class="portfolio-subtitle">Видання Limited Edition</h2>
             <p>Дизайн</p>
           </li>
           <li>
             <img src="./images/project-8.jpg" alt="Фото ярлика" width="370" />
-            <h2>Проєкт LAB</h2>
+            <h2 class="portfolio-subtitle">Проєкт LAB</h2>
             <p>Маркетинг</p>
           </li>
           <li>
             <img src="./images/project-9.jpg" alt="Фото людина працює за ноутбуком" width="370" />
-            <h2>Growing Business</h2>
+            <h2 class="portfolio-subtitle">Growing Business</h2>
             <p>Додаток</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
-        <ul class="list">
-          <li>
+    <footer class="page-footer">
+      <a class="logo link" href="./index.html"><span class="accent">Web</span>Studio</a>
+      <address class="address">
+        <ul class="footer-contact list">
+          <li class="footer-contact-item">
             <a
+              class="footer-address-link link"
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+          <li class="footer-contact-item">
+            <a class="footer-contact-link link" href="mailto:info@example.com">info@example.com</a>
           </li>
-          <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <li class="footer-contact-item">
+            <a class="footer-contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
