--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="page-nav">
         <a class="logo link" href="./index.html"><span class="accent">Web</span>Studio</a>
         <ul class="menu list">
-          <li class="menu-item"><a class="menu-link link" href="./index.html">Студія</a></li>
+          <li class="menu-item"><a class="menu-link current link" href="./index.html">Студія</a></li>
           <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфоліо</a></li>
           <li class="menu-item"><a class="menu-link link" href="./index.html">Контакти</a></li>
         </ul>
