--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <a class="logo link" href="./index.html"><span class="accent">Web</span>Studio</a>
         <ul class="menu list">
           <li class="menu-item"><a class="menu-link link" href="./index.html">Студія</a></li>
-          <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфоліо</a></li>
+          <li class="menu-item"><a class="menu-link current link" href="./portfolio.html">Портфоліо</a></li>
           <li class="menu-item"><a class="menu-link link" href="./index.html">Контакти</a></li>
         </ul>
       </nav>
@@ -44,54 +44,54 @@
           <li><button class="filter-btn" type="button">Маркетинг</button></li>
         </ul>
         <ul class="list">
-          <li>
+          <li><a class="link" href="./portfolio.html">
             <img src="./images/project-1.jpg" alt="Фото веб-сайту Технокряк" width="370" />
             <h2 class="portfolio-subtitle">Технокряк</h2>
-            <p>Веб-сайт</p>
+            <p class="portfolio-text">Веб-сайт</p></a>
           </li>
-          <li>
+          <li><a class="link" href="./portfolio.html">
             <img src="./images/project-2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
             <h2 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <p class="portfolio-text">Дизайн</p></a>
           </li>
-          <li>
+          <li><a class="link" href="./portfolio.html">
             <img src="./images/project-3.jpg" alt="Логотип ресторану The Seafood" width="370" />
             <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
-            <p>Додаток</p>
+            <p class="portfolio-text">Додаток</p></a>
           </li>
-          <li>
+          <li><a class="link" href="./portfolio.html">
             <img src="./images/project-4.jpg" alt="Фото навушників" width="370" />
             <h2 class="portfolio-subtitle">Проєкт Prime</h2>
-            <p>Маркетинг</p>
+            <p class="portfolio-text">Маркетинг</p></a>
           </li>
-          <li>
+          <li><a class="link" href="./portfolio.html">
             <img src="./images/project-5.jpg" alt="Фото двох коробок" width="370" />
             <h2 class="portfolio-subtitle">Проєкт Boxes</h2>
-            <p>Додаток</p>
+            <p class="portfolio-text">Додаток</p></a>
           </li>
-          <li>
+          <li><a class="link" href="./portfolio.html">
             <img
               src="./images/project-6.jpg"
               alt="Фото веб-сайту Inspiration has no Borders"
               width="370"
             />
             <h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <p class="portfolio-text">Веб-сайт</p></a>
           </li>
-          <li>
+          <li><a class="link" href="./portfolio.html">
             <img src="./images/project-7.jpg" alt="Фото розгортки журналу" width="370" />
             <h2 class="portfolio-subtitle">Видання Limited Edition</h2>
-            <p>Дизайн</p>
+            <p class="portfolio-text">Дизайн</p></a>
           </li>
-          <li>
+          <li><a class="link" href="./portfolio.html">
             <img src="./images/project-8.jpg" alt="Фото ярлика" width="370" />
             <h2 class="portfolio-subtitle">Проєкт LAB</h2>
-            <p>Маркетинг</p>
+            <p class="portfolio-text">Маркетинг</p></a>
           </li>
-          <li>
+          <li><a class="link" href="./portfolio.html">
             <img src="./images/project-9.jpg" alt="Фото людина працює за ноутбуком" width="370" />
             <h2 class="portfolio-subtitle">Growing Business</h2>
-            <p>Додаток</p>
+            <p class="portfolio-text">Додаток</p></a>
           </li>
         </ul>
       </section>
