deletes excess font-weight properties

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
         <ul class="list">
           <li>
             <h3 class="qualities-subtitle">Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <p class="qualities-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
             <h3 class="qualities-subtitle">Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <p class="qualities-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
             <h3 class="qualities-subtitle">Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <p class="qualities-text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
             <h3 class="qualities-subtitle">Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <p class="qualities-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
@@ -86,22 +86,22 @@
           <li>
             <img src="./images/img-1.jpg" alt="Фото Ігора Дем'яненко" width="270" />
             <h3 class="team-subtitle">Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p class="team-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="Фото Ольги Рєпіної" width="270" />
             <h3 class="team-subtitle">Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img-3.jpg" alt="Фото Миколи Тарасова" width="270" />
             <h3 class="team-subtitle">Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p class="team-text">Marketing</p>
           </li>
           <li>
             <img src="./images/img-4.jpg" alt="Фото Михайла Єрмакова" width="270" />
             <h3 class="team-subtitle">Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
